Adding menu resource file in res directory **adding string resource for signout

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,4 @@
 <resources>
-    <string name="app_name">Material Login Example</string>
-
-    <string name="hello_world">Hello world!</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">professional Skills</string>
+    <string name="sign_out">sign out</string>
 </resources>
